chore: update readme and package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mishu-service-template",
+  "name": "@mishu-studio/service-template",
   "description": "Backend template service by Mishu-Studio",
   "version": "1.0.0",
   "main": "index.js",
